# pachash

./: CHANGELOG.md  Cargo.toml  README.md
src/: block.rs  config.rs  hash.rs  index.rs  lib.rs  merge.rs  reader.rs  store.rs  writer.rs
tests/: edge_cases.rs  format_block_layout.rs  hash.rs  index_locate.rs  merge.rs  overlap.rs  public_api.rs  query.rs  write_roundtrip.rs
tests/common/: mod.rs
