[package]
name = "pachash"
version = "0.1.1"
edition = "2021"
description = "space-efficient static hash index over an on-disk variable-size object store"
license = "MIT"
repository = "https://github.com/hey-jj/pachash"
readme = "README.md"
keywords = ["hashing", "index", "key-value", "storage", "elias-fano"]
categories = ["data-structures", "algorithms"]

[dependencies]
